--- a/src/app/admin/admin-about/admin-about.component.scss
+++ b/src/app/admin/admin-about/admin-about.component.scss
@@ -1,4 +1,8 @@
 #adminAboutInner {
     background-color: white;
     padding: 50px;
+    h2 {
+        padding: 30px;
+        text-align: center;
+    }
 }
