--- a/src/app/admin/login/login.component.html
+++ b/src/app/admin/login/login.component.html
@@ -1,11 +1,11 @@
 <div id="login">
     <form class="loginForm">
         <mat-form-field class="full-width">
-            <input matInput placeholder="логін" [(ngModel)]="adminLogin" name="adminLogin">
+            <input matInput placeholder="Логін" [(ngModel)]="adminLogin" name="adminLogin">
         </mat-form-field>
         <mat-form-field class="full-width">
-            <input matInput placeholder="пароль" [(ngModel)]="adminPass" name="adminPass">
+            <input matInput placeholder="Пароль" [(ngModel)]="adminPass" name="adminPass">
         </mat-form-field>
-        <button mat-raised-button color="accent" (click)="login()">Login</button>
+        <button mat-raised-button color="accent" (click)="login()">Увійти</button>
     </form>
 </div>
