--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -8,10 +8,8 @@
         <p>{{about.bio}}</p>
         <div id="aboutPressKit">
             <button mat-stroked-button><a download="filename" href="{{about.pressKitUrl}}" target="_blank">Прес-кіт</a></button>
-            <p>Includes everything you fine press people need to do your work.<br>
-            High res images, a full biography and other nice things you might need from time to time. <br>
-                    All packed in an almighty ZIP archive and made with a Mac. <br>
-                    If you happen to need something else, just let us know.</p>
+            <p>Включає фото високої якості, повну біографію українською та англійською мовами.<br>
+                Натиснувши кнопку ви зможете все це завантажити у вигляді zip-архіву.</p>
         </div>
     </div>
 </div>
