--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -4,48 +4,20 @@
     </div>
     <app-transparent></app-transparent>
     <div id="contactInfo">
-        <h4>Bohdan Sehin</h4>
-        <div>
-            <p>Email: 0000@gmail.com</p>
-        </div>
-    </div>
-    <div id="contactForm">
-        <h2>Send me a message</h2>
-        <form class="example-form" (submit)="onAddContact(contactForm)" #contactForm="ngForm">
-            <mat-form-field class="example-full-width">
-                <input 
-                    matInput 
-                    type="text"
-                    name="guestName"
-                    ngModel 
-                    required
-                    placeholder="Enter your name:"
-                    #guestName="ngModel">
-                    <mat-error *ngIf="guestName.invalid">Please enter your name.</mat-error>
-            </mat-form-field>
-            <mat-form-field class="example-full-width">
-                <input 
-                    matInput 
-                    type="email"
-                    name="guestEmail"
-                    ngModel 
-                    required
-                    placeholder="Enter your e-mail:"
-                    #guestEmail="ngModel">
-                    <mat-error *ngIf="guestEmail.invalid">Please enter your e-mail.</mat-error>
-            </mat-form-field>
-            <mat-form-field class="example-full-width">
-                <textarea 
-                    matInput 
-                    name="guestMessage" 
-                    ngModel
-                    required
-                    placeholder="Leave a message"
-                    #guestMessage="ngModel">
-                </textarea>
-                <mat-error *ngIf="guestMessage.invalid">Please leave some message.</mat-error>
-            </mat-form-field>
-            <button mat-stroked-button type="submit">Send</button>
-        </form>
+        <h4>Богдан Сегін</h4>
+        <p>bohdansehin@yahoo.com</p>
+        <h5>Львівська національна філармонія</h5>
+        <p>вул. Чайковського, 7<br>
+            79000 Львів<br>
+            Україна     
+        </p>
+        <h5>Міжнародний фестиваль сучасної музики «Контрасти»</h5>
+        <p>http://contrasts.org.ua/<br>
+            contrastsfestival@gmail.com    
+        </p>
+        <h5>Ensemble Nostri Temporis</h5>
+        <p>entmusic.org<br>
+            ensemblenostritemporis@gmail.com    
+        </p>
     </div>
 </div>
