--- a/src/app/pages/projects/projects.component.html
+++ b/src/app/pages/projects/projects.component.html
@@ -5,8 +5,7 @@
     <app-transparent></app-transparent>
     <div id="projectsList">
         <h2>List of projects</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <br>
-            Assumenda, reiciendis eos! Ullam enim eligendi in excepturi obcaecati hic suscipit eos sequi, <br>
-            sed culpa veritatis? Similique nostrum expedita vel molestiae aliquam.</p>
+        <h4>Контрасти</h4>
+        <iframe width="640" height="480" src="https://www.youtube.com/embed/videoseries?list=PLY2gcgwMGDmuSsS6if5ka5TF7ZEK8BU3Q" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
     </div>
 </div>
