--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -7,14 +7,14 @@
         <ul>
             <li><a (click)="onScrollElem('adminAbout')">About</a></li>
             <li><a (click)="onScrollElem('adminWorks')">Works</a></li>
+            <li><a (click)="onScrollElem('adminVideos')">Videos</a></li>
             <li><a (click)="onScrollElem('adminProjects')">Projects</a></li>
-            <li><a (click)="onScrollElem('adminContact')">Contact</a></li>
         </ul>
     </div>
     <app-admin-about id="adminAbout"></app-admin-about>
     <app-admin-works id="adminWorks"></app-admin-works>
+    <app-admin-videos id="adminVideos"></app-admin-videos>
     <app-admin-projects id="adminProjects">
         <app-upload-image></app-upload-image>
     </app-admin-projects>
-    <app-admin-contact id="adminContact"></app-admin-contact>
 </div>
