--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,7 +1,7 @@
 <footer>
     <div id="footerInner">
         <div id="footerLogo">
-            <a routerLink="home">Bohdan Sehin</a>
+            <a routerLink="home">Богдан Сегін</a>
         </div>
         <div id="footerMenu">
             <ul>
@@ -17,7 +17,7 @@
             <div><a href=""><img src="../../../assets/soundcloud-logo.png" alt="" srcset=""></a></div>
             <div><a href=""><img src="../../../assets/youtube.png" alt="" srcset=""></a></div>
         </div>
-        <div id="footerCopyright">© 2019 Богдан Сегін. All rights reserved.</div>
+        <div id="footerCopyright">© 2019 Богдан Сегін. Всі права захищені.</div>
     </div>
 </footer>
 
