--- a/src/app/pages/contact/contact.component.scss
+++ b/src/app/pages/contact/contact.component.scss
@@ -4,24 +4,10 @@
     }
     #contactInfo {
         background-color: lightgray;
-        padding: 50px;
+        padding: 100px 0;
         text-align: center;
-    }
-    #contactForm {
-        background-color: white;
-        h2 {
-            text-align: center;
-            padding: 30px 0;
-        }
-        form {
-            width: 400px;
-            margin: auto;
-            .example-full-width {
-                width: 100%;
-            }
-            button {
-                margin: 30px 0;
-            }
+        h5 {
+            margin-top: 50px;
         }
     }
 }
