--- a/src/app/pages/projects/projects.component.scss
+++ b/src/app/pages/projects/projects.component.scss
@@ -10,6 +10,7 @@
         justify-content: center;
         align-items: center;
         text-align: center;
+        height: 2000px;
         h2 {
             padding: 20px;
         }
