--- a/src/app/admin/admin-works/admin-works.component.scss
+++ b/src/app/admin/admin-works/admin-works.component.scss
@@ -9,9 +9,6 @@
         padding: 30px;
         text-align: center;
     }
-    #piecesTable {
-        width: 90vw;
-    }
     #preAddNewPiece {
         padding: 50px;
         display: flex;
@@ -25,4 +22,13 @@
             text-align: center;
         }
     }
+}
+.worksTd {
+    padding: 5px;
+}
+.narrowTd {
+    max-width: 100px;
+    overflow: scroll;
+    text-overflow: ellipsis;
+    padding: 5px;
 }
