--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -13,9 +13,9 @@
             </ul>
         </div>
         <div id="footerSocial">
-            <div><a href=""><img src="../../../assets/facebook-logo.png" alt="" srcset=""></a></div>
-            <div><a href=""><img src="../../../assets/soundcloud-logo.png" alt="" srcset=""></a></div>
-            <div><a href=""><img src="../../../assets/youtube.png" alt="" srcset=""></a></div>
+            <div><a href="https://www.facebook.com/bohdan.sehin"><img src="../../../assets/facebook-logo.png" alt="" srcset=""></a></div>
+            <div><a href="https://soundcloud.com/bohdansehin"><img src="../../../assets/soundcloud-logo.png" alt="" srcset=""></a></div>
+            <div><a href="https://www.youtube.com/channel/UCK8ZrQlSd0ZvTHsUJpRAX7Q"><img src="../../../assets/youtube.png" alt="" srcset=""></a></div>
         </div>
         <div id="footerCopyright">© 2019 Богдан Сегін. Всі права захищені.</div>
     </div>
