--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,6 +1,6 @@
 <header (window:scroll)="fixedScroll()">
     <div id="logo">
-        <a routerLink="home" (click)="removeActive()">Богдан Сегін</a> <p>УКР | ENG</p>
+        <a routerLink="home" (click)="removeActive()">Богдан Сегін</a> <p><a routerLink="home" (click)="removeActive()">УКР</a> | <a routerLink="english" (click)="removeActive()">ENG</a></p>
     </div>
     <div id="menuArea">
         <input type="checkbox" id="menuToggle">
