--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -10,6 +10,10 @@
     p {
         margin-left: 20px;
         line-height: 29px;
+        a {
+            font-weight: normal;
+            font-size: 14px;
+        }
     }
 }
 #menuArea {
