--- a/src/app/admin/admin-works/admin-works.component.html
+++ b/src/app/admin/admin-works/admin-works.component.html
@@ -4,42 +4,54 @@
         <table mat-table [dataSource]="works" class="full-width">
             <ng-container matColumnDef="position">
                 <th mat-header-cell *matHeaderCellDef>#</th>
-                <td mat-cell *matCellDef="let piece; let i = index"> {{i}}</td>
+                <td mat-cell *matCellDef="let piece; let i = index" class="worksTd"> {{i}}</td>
             </ng-container>
             <ng-container matColumnDef="title">
-                <th mat-header-cell *matHeaderCellDef>Title</th>
-                <td mat-cell *matCellDef="let piece">{{piece.title}}</td>
+                <th mat-header-cell *matHeaderCellDef>Назва</th>
+                <td mat-cell *matCellDef="let piece" class="worksTd">{{piece.title}}</td>
             </ng-container>
             <ng-container matColumnDef="instr">
-                <th mat-header-cell *matHeaderCellDef>Instr</th>
-                <td mat-cell *matCellDef="let piece">{{piece.instr}}</td>
+                <th mat-header-cell *matHeaderCellDef>Склад</th>
+                <td mat-cell *matCellDef="let piece" class="worksTd">{{piece.instr}}</td>
             </ng-container>
             <ng-container matColumnDef="duration">
-                <th mat-header-cell *matHeaderCellDef>Duration</th>
-                <td mat-cell *matCellDef="let piece">{{piece.duration}}</td>
+                <th mat-header-cell *matHeaderCellDef>Тривалість</th>
+                <td mat-cell *matCellDef="let piece" class="worksTd">{{piece.duration}}</td>
             </ng-container>
             <ng-container matColumnDef="year">
-                <th mat-header-cell *matHeaderCellDef>Year</th>
-                <td mat-cell *matCellDef="let piece">{{piece.year}}</td>
+                <th mat-header-cell *matHeaderCellDef>Рік</th>
+                <td mat-cell *matCellDef="let piece" class="worksTd">{{piece.year}}</td>
+            </ng-container>
+            <ng-container matColumnDef="audio">
+                <th mat-header-cell *matHeaderCellDef>Audio</th>
+                <td mat-cell *matCellDef="let piece" class="narrowTd">{{piece.audioUrl}}</td>
+            </ng-container>
+            <ng-container matColumnDef="video">
+                <th mat-header-cell *matHeaderCellDef>Video</th>
+                <td mat-cell *matCellDef="let piece" class="narrowTd">{{piece.videoUrl}}</td>
+            </ng-container>
+            <ng-container matColumnDef="pdf">
+                <th mat-header-cell *matHeaderCellDef>PDF</th>
+                <td mat-cell *matCellDef="let piece" class="narrowTd">{{piece.pdfUrl}}</td>
             </ng-container>
             <ng-container matColumnDef="chapter">
-                <th mat-header-cell *matHeaderCellDef>Chapter</th>
-                <td mat-cell *matCellDef="let piece">{{piece.chapter}}</td>
+                <th mat-header-cell *matHeaderCellDef>Розділ</th>
+                <td mat-cell *matCellDef="let piece" class="worksTd">{{piece.chapter}}</td>
             </ng-container>
             <ng-container matColumnDef="selected">
-                <th mat-header-cell *matHeaderCellDef>Selected</th>
-                <td mat-cell *matCellDef="let piece">{{piece.selected}}</td>
+                <th mat-header-cell *matHeaderCellDef>Вибраний</th>
+                <td mat-cell *matCellDef="let piece" class="worksTd">{{piece.selected}}</td>
             </ng-container>
             <ng-container matColumnDef="edit">
-                <th mat-header-cell *matHeaderCellDef>Edit</th>
-                <td mat-cell *matCellDef="let piece">
-                    <button mat-mini-fab color="accent" (click)="editPiece(piece)">Edit</button>
+                <th mat-header-cell *matHeaderCellDef>Ред</th>
+                <td mat-cell *matCellDef="let piece" class="worksTd">
+                    <button mat-mini-fab color="accent" (click)="editPiece(piece)">Ред</button>
                 </td>
             </ng-container>
             <ng-container matColumnDef="delete">
-                <th mat-header-cell *matHeaderCellDef>Delete</th>
-                <td mat-cell *matCellDef="let piece">
-                    <button mat-mini-fab color="warn" (click)="deletePiece(piece)">Del</button>
+                <th mat-header-cell *matHeaderCellDef>Видал</th>
+                <td mat-cell *matCellDef="let piece" class="worksTd">
+                    <button mat-mini-fab color="warn" (click)="deletePiece(piece)">Вид</button>
                 </td>
             </ng-container>
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
@@ -105,6 +117,34 @@
             <section>
                 <mat-checkbox id="pieceSelected" name="pieceSelected" [(ngModel)]="piece.selected">Вибрані</mat-checkbox>
             </section>
+            <mat-form-field class="full-width">
+                <input 
+                    matInput 
+                    type="text"
+                    id="pieceAudioUrl"
+                    name="pieceAudioUrl"
+                    [(ngModel)]="piece.audioUrl"
+                    placeholder="Лінк на аудіо:">
+            </mat-form-field>
+            <mat-form-field class="full-width">
+                <input 
+                    matInput 
+                    type="text"
+                    id="pieceVideoUrl"
+                    name="pieceVideoUrl"
+                    [(ngModel)]="piece.videoUrl"
+                    placeholder="Лінк на відео:">
+            </mat-form-field>
+            <mat-form-field class="full-width">
+                <input 
+                    matInput 
+                    type="text"
+                    readonly
+                    id="piecePdfUrl"
+                    name="piecePdfUrl"
+                    [(ngModel)]="piece.pdfUrl"
+                    placeholder="Лінк на партитуру">
+            </mat-form-field>
             <br>
             <button mat-stroked-button type="submit" [hidden]="update">Додати</button>
             <button mat-stroked-button (click)="updatePiece()" [hidden]="!update">Оновити</button>
